# costguard

./: .gitignore  Makefile  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: app.py
src/collector/: cost_explorer.py
src/detector/: anomaly.py
src/notifier/: slack.py
src/remediator/: resources.py
terraform/: dynamodb.tf  events.tf  iam.tf  lambda.tf  main.tf  outputs.tf  variables.tf
tests/: test_detector.py  test_remediator.py
